Add common checkstyle rules and fix issues